--- a/RawERD/RawERD.csproj
+++ b/RawERD/RawERD.csproj
@@ -225,6 +225,12 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RawERD.Data\RawERD.Data.csproj">
+      <Project>{fdb07d1d-d250-49dc-829f-d1078fa6fc8a}</Project>
+      <Name>RawERD.Data</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
