--- a/RawERD/Web.config
+++ b/RawERD/Web.config
@@ -9,8 +9,12 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-RawERD-20140521101254.mdf;Initial Catalog=aspnet-RawERD-20140521101254;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection"
+         connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-RawERD-20140521101254.mdf;Initial Catalog=aspnet-RawERD-20140521101254;Integrated Security=True"
+         providerName="System.Data.SqlClient" />
+    <add name="DataModel"
+         connectionString="data source=DARKSTAR\SQLEXPRESS;initial catalog=RawERD;persist security info=True;user id=webadmpt;password=Isel2014;MultipleActiveResultSets=True;App=EntityFramework"
+         providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
