adicionado error controller adicionadas error views adicionada rota error adicionadas home views for account disabled and removed alterados os menus no _layout (app name) e _loginPartial (recover) adicionada Recover view adicionado modelo RecoverViewModel adicionado index ao AccountController adicionado recover ao AccountController

--- a/RawERD/RawERD.csproj
+++ b/RawERD/RawERD.csproj
@@ -159,6 +159,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -214,6 +215,14 @@
     <Content Include="Views\Account\Manage.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Error\BadRequest.cshtml" />
+    <Content Include="Views\Error\Forbidden.cshtml" />
+    <Content Include="Views\Error\MethodNotAllowed.cshtml" />
+    <Content Include="Views\Error\NotFound.cshtml" />
+    <Content Include="Views\Error\Unauthorized.cshtml" />
+    <Content Include="Views\Home\AccountDisabled.cshtml" />
+    <Content Include="Views\Home\AccountRemoved.cshtml" />
+    <Content Include="Views\Account\Recover.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
