adicionado script e css joint no BundleConfig adicionado css ao Content e js ao Scripts adicionada pasta config e ficheiro de configuração de email adicionado modelo de Mail com 3 classes, Mailer, MailLoadConfiguration e MailModel corrigidas views (about, contact, home) e controllers (home) adicionado «authentication mode="Forms"» no web.config adicionado «customErrors mode="On"» no web.config adicionado Application_Error no Global.asax adicionados os modelos de Account (RemoveAccountViewModel, RecoverViewModel)

--- a/RawERD/RawERD.csproj
+++ b/RawERD/RawERD.csproj
@@ -168,19 +168,26 @@
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\Mail\Mailer.cs" />
+    <Compile Include="Models\Mail\MailLoadConfiguration.cs" />
+    <Compile Include="Models\Mail\MailModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\joint.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Config\mail.config" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\joint.min.js" />
+    <Content Include="Scripts\joint.shapes.erd.min.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
@@ -225,6 +232,8 @@
     <Content Include="Views\Home\AccountDisabled.cshtml" />
     <Content Include="Views\Home\AccountRemoved.cshtml" />
     <Content Include="Views\Account\Recover.cshtml" />
+    <Content Include="Views\Error\ServerError.cshtml" />
+    <Content Include="Views\Error\UnknownError.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
