--- a/RawERD/Web.config
+++ b/RawERD/Web.config
@@ -23,7 +23,17 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <authentication mode="None" />
+    <customErrors mode="On" defaultRedirect="~/Error/UnknownError">
+      <error statusCode="400" redirect="~/Error/BadRequest" ></error>
+      <error statusCode="401" redirect="~/Error/Unauthorized"></error>
+      <error statusCode="403" redirect="~/Error/Forbidden"></error>
+      <error statusCode="404" redirect="~/Error/NotFound"></error>
+      <error statusCode="405" redirect="~/Error/MethodNotAllowed"></error>
+      <error statusCode="500" redirect="~/Error/ServerError"></error>
+    </customErrors>
+    <authentication mode="Forms">
+      <forms loginUrl="~/Account/LogOn" timeout="2880" />
+    </authentication>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
