--- a/RawERD/Config/mail.config
+++ b/RawERD/Config/mail.config
@@ -5,7 +5,7 @@
       smtpServer   = "smtp.gmail.com"
       smtpPort     = "587"
       smtpUsername = "webadmpt@gmail.com"
-      smtpPassword = "Isel2014"
+      smtpPassword = ""
     />
   <!--
   http://email.about.com/od/accessinggmail/f/Gmail_SMTP_Settings.htm
