--- a/RawERD/RawERD.csproj
+++ b/RawERD/RawERD.csproj
@@ -162,6 +162,7 @@
     <Compile Include="Controllers\ErrorController.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Controllers\EsquemaController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="DbContext\RawERDDbContext.cs" />
     <Compile Include="Global.asax.cs">
@@ -235,6 +236,13 @@
     <Content Include="Views\Account\Recover.cshtml" />
     <Content Include="Views\Error\ServerError.cshtml" />
     <Content Include="Views\Error\UnknownError.cshtml" />
+    <Content Include="Views\Esquema\Create.cshtml" />
+    <Content Include="Views\Esquema\Delete.cshtml" />
+    <Content Include="Views\Esquema\Details.cshtml" />
+    <Content Include="Views\Esquema\Edit.cshtml" />
+    <Content Include="Views\Esquema\Index.cshtml" />
+    <Content Include="Views\Esquema\Esquema.cshtml" />
+    <Content Include="Views\Esquema\_EsquemaLayout.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
